<resources>
    <string name="app_name">Ecom Sathi Delivery Partner</string>
    <string name="upload_your_documents">Upload Your Documents</string>
    <string name="aadhar_card">Aadhaar Card</string>
    <string name="pending">Pending</string>
    <string name="click_front_photo">Click Front Photo</string>
    <string name="click_back_photo">Click Back Photo</string>
    <string name="pan_card">PAN Card</string>
    <string name="bank_account">Bank Account</string>
    <string name="uplaod_from_gallery">Upload from \n Gallery</string>
    <string name="camera">Camera</string>
    <string name="Female">Female</string>
    <string name="please_uplaod_a_valid_image_of_aadhar_card">Please upload a valid image of \nAadhaar Card.</string>
    <string name="image_not_valid">Image Not Valid</string>
    <string name="don_t_have_pan_card">Don\'t Have PAN Card</string>
    <string name="i_accept_above_terms_conditions">I ACCEPT ABOVE TERMS &amp; CONDITIONS</string>
    <string name="_20_tax_tds_will_be_deducted_from_payout_as_per_govt_of_india_norms">Tax (TDS) will be deducted from\npayout as per Govt. of India Norms.</string>
    <string name="exit">Exit</string>
    <string name="full_name">FULL NAME</string>
    <string name="aadhar_card_number">AADHAAR CARD NUMBER</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="verification">Verification</string>
    <string name="by_signing_up_you_agree_with">By signing up, you agree with the</string>
    <string name="verify">Verify</string>
    <string name="near_by_locations">Near by Locations</string>
    <string name="terms_of_service"><u>Terms of Use</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="no_internet">Check Your Internet Connection</string>
    <string name="enter_driving_number">Driving License Number </string>
    <string name="enter_expiry_date">Expiry Date</string>
    <string name="expiry_date">DD/MM/YYYY</string>
    <string name="account_holder_name"> Account Holder Name</string>
    <string name="enter_licence_edittext">License Number</string>
    <string name="id_658978">ID: 658978</string>
    <string name="login_as_ecom_agent">Login As Ecom Agent</string>
    <string name="Join_As_Ecom_Agent">Join As Ecom Agent</string>
    <string name="find_ifsc">Find IFSC</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_2_5_km">2.5 km</string>
    <string name="_bank_details">Bank Details</string>
    <string name="enter_pan_card_number">Enter PAN Card Number</string>
    <string name="_pan_card">PAN Card</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="find_your_ifsc"><u>FIND YOUR IFSC?</u></string>
    <string name="please_visit_at_onboarding_center">Please visit at \nOnboarding Center</string>
    <string name="application_under_hr_review_you_will_be_hearing_from_us_soon">Application under HR review you will\n be hearing from us soon!</string>
    <string name="start_earning_by_downloading_the_ecom_sathi_app">Start Earning By Downloading The \n<b>Application</b></string>
    <string name="sorry_there_is_some_problem_in_your_application"><font color='#BA3838'>Sorry!\n</font> there is some problem in\n your application.</string>
    <string name="congratulations_welcome_to_ecom_express"><font color='#38BA92'>Congratulations!</font>\nWelcome to Ecom Express</string>
    <string name="it_will_take_up_to_48_hrs">It will take up to 48 Hrs.</string>
    <string name="documents_submitted">Documents Submitted</string>
    <string name="submit">Submit</string>
    <string name="hr_approval">HR Approval</string>
    <string name="hr_approved">HR Approved</string>
    <string name="hr_rejected">HR Rejected</string>
    <string name="onboarding_center_approval">Onboarding Center Approval</string>
    <string name="onboarding_center_approved">Onboarding Center Approved</string>
    <string name="onboarding_center_rejected">Onboarding Center Rejected</string>
    <string name="terms_conditions">Accept Term &amp; Conditions</string>
    <string name="i_agree">I AGREE</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="check_selfie">Check Selfie</string>
    <string name="enter_pin_code">Enter Your Current Pin Code</string>
    <string name="make_sure_your_selfie_clearly_show_your_face">Make sure your selfie clearly show your face</string>
    <string name="retake">Retake</string>
    <string name="confirm">Confirm</string>
    <string name="_91">+91</string>
    <string name="_continue">Continue</string>
    <string name="_adhar_card_front_photo">Aadhaar Card Front Photo</string>
    <string name="_aadhar_back_">Aadhaar Card Back Photo</string>
    <string name="_original_copies">with the original copies of</string>
    <string name="transgender">Transgender</string>
    <string name="need_help">Need Help?</string>
    <string name="call_onboarding_center">CALL ONBOARDING CENTER</string>
    <string name="navigate">NAVIGATE</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="do_you_have_a_referral_code">Do you have a Referral Code</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="enter_referral_code">REFERRAL CODE</string>
    <string name="visit_onboarding_center">VISIT ONBOARDING CENTER</string>
    <string name="select_bank">SELECT BANK</string>
    <string name="select_state">SELECT STATE</string>
    <string name="select_city">SELECT CITY</string>
    <string name="select_branch">SELECT BRANCH</string>
    <string name="preferred_work_location">Preferred Work Location</string>
    <string name="driving_license">Driving License</string>
    <string name="enter_valid_number">Enter Valid Number</string>
    <string name="enter_valid_adhar_number">Enter Valid Adhaar Number</string>
    <string name="don_t_have_driving_license">DON\'T HAVE DRIVING LICENSE</string>
    <string name="English">English</string>
    <string name="Hindi">Hindi</string>
    <string name="Tamil">Tamil</string>
    <string name="Telugu">Telugu</string>
    <string name="Gujarati">Gujarati</string>
    <string name="Marathi">Marathi</string>
    <string name="Punjabi">Punjabi</string>
    <string name="Odia">Odia</string>
    <string name="Bangla">Bangla</string>
    <string name="Malayalam">Malayalam</string>
    <string name="Hindi_convert">हिन्दी</string>
    <string name="Tamil_convert">தமிழ்</string>
    <string name="Telegu_convert">బండి</string>
    <string name="Gujrati_convert">ગુજરાતી</string>
    <string name="Marathi_convert">मराठी</string>
    <string name="Punjabi_convert">ਪੰਜਾਬੀ</string>
    <string name="Odia_convert">ଓଡିଆ</string>
    <string name="Bangla_convert">বাংলা</string>
    <string name="Malayalam_convert">മലയാളം</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_otp_statement">We will send an OTP via SMS on the mobile number you enter</string>
    <string name="send_otp_">Send OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="resend_otp_statement">We have sent a verification OTP to </string>
    <string name="Did_receive">Didn\'t receive? <font color='#BA3838'></font></string>
    <string name="resend_otp_via_sms">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_select_one_lang">Select At Least One Language</string>
    <string name="enter_address">Enter Address</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_state">Enter State</string>
    <string name="enetr_pin_code_fill">Enter Pin code</string>
    <string name="flat_house_no_building_appartment">Flat, House No</string>
    <string name="same_as_permanent_address">Same as Permanent Address</string>
    <string name="current_address">Current Address</string>
    <string name="permanent_address">permanent address</string>
    <string name="enter_valid_pan_number">Enter Valid PAN Number</string>
    <string name="enter_driving_licence">Enter Driving Licence</string>
    <string name="provide_valid_expiry_date">Provide Valid Expiry Date</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_full_name_as_per_aadhaar">Enter Full Name As Per Aadhaar</string>
    <string name="verified">Verified</string>
    <string name="rejected">Rejected</string>
    <string name="dl_not_available">DL Not Available</string>
    <string name="select_language">Select Language</string>
    <string name="minimum_per_day_income_guaranteed">Minimum per day \nincome guaranteed!</string>
    <string name="effort_based_earning">Effort Based Earning</string>
    <string name="weekly_payments">Weekly Payments</string>
    <string name="flexible_time_slot">Flexible Time Slot</string>
    <string name="no_location_found">No Location found</string>
    <string name="enter_aadhaar_number">Enter AAdhaar Number</string>
    <string name="enter_current_address">Enter Current Address</string>
    <string name="enter_permanent_address">Enter Permanent Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="hr_approval_time">It will take up to 48 hrs.</string>
    <string name="alert">Alert</string>
    <string name="reGrantPermissionMsg">You have denied the required permission. Please grant to proceed further.</string>
    <string name="action_settings">Settings</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="enter_ifsc_code">IFSC CODE</string>
    <string name="pan_not_available">PAN Not Available</string>
    <string name="enter_valid_pan_card">Enter Valid PAN Card Number</string>
    <string name="ok">OK</string>
    <string name="pan_verification_skipped">PAN Card verification skipped</string>
    <string name="available">Available</string>
    <string name="enter_valid_ifsc_code">Enter Valid IFSC Code</string>
    <string name="enter_valid_account_no">Enter Valid Account Number</string>
    <string name="termsurl">/v2/onboarding/display_tnc/</string>
    <string name="privacy_policy_url">https://ecom-link.s3.ap-south-1.amazonaws.com/privacy_policy.html</string>
    <string name="otp_verified_successfully">OTP verified successfully</string>
    <string name="auto_fetching_otp">Auto fetching OTP...</string>
    <string name="name">Name</string>
    <string name="pin_code_incorrect">Pin code Incorrect</string>
    <string name="you_have_connectivity_issue_check_your_network">You have connectivity issue..\nCheck Your Network</string>
    <string name="netwrk_error">Network Error</string>
    <string name="enter_account_holder_name">Enter account holder name</string>
    <string name="submitted_successfully">Submitted Successfully</string>
    <string name="cheque_uploaded">Image Uploaded</string>
    <string name="hiring_on_hold">Onboarding Center On Hold</string>
    <string name="read_instruction">Please read the Terms of Use</string>
    <string name="download_sathi_app">Download\nSATHi App</string>
    <string name="download_sruti_app">Download\nSRUTi App</string>
    <string name="sathi">SATHi</string>
    <string name="sruti">SRUTi</string>
    <string name="bank_not_found">Bank Not Found</string>
    <string name="bank_name">bank name</string>
    <string name="branch_name">branch name</string>
    <string name="refer_friend">Refer a Friend?</string>
    <string name="reference_dialog_text"><![CDATA[Invite your friends & Get ₹100 Cashback]]></string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>