<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="@dimen/_20DP">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_20DP"
        android:background="@drawable/reference_dialog_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/refer_friend_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refer_friend"
            android:textColor="@color/black_1A"
            android:textSize="@dimen/_21SP"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reference_disc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference_dialog_text"
            app:layout_constraintTop_toBottomOf="@id/refer_friend_tv"
            app:layout_constraintStart_toStartOf="@id/refer_friend_tv"
            android:layout_marginTop="@dimen/_20DP"
            android:textColor="@color/black_1A"
            android:textSize="@dimen/_21SP"
            android:fontFamily="@font/roboto_bold"
            android:drawableStart="@drawable/dialog_error"
            android:drawablePadding="@dimen/_20DP" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_btn"
            android:layout_width="@dimen/_0DP"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_F8"
            android:textColor="@color/grey_78"
            android:background="@drawable/dialog_btn"
            android:text="@string/no"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="@dimen/_15DP"
            android:textSize="@dimen/_21SP"
            android:layout_marginTop="@dimen/_20DP"
            android:layout_marginEnd="@dimen/_10DP"
            app:layout_constraintTop_toBottomOf="@id/reference_disc_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/yes_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_btn"
            android:layout_width="@dimen/_0DP"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/dialog_btn"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue_8f"
            android:paddingVertical="@dimen/_15DP"
            android:textSize="@dimen/_21SP"
            android:layout_marginStart="@dimen/_10DP"
            app:layout_constraintTop_toTopOf="@id/no_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/no_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>