<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_rectangle_with_two_side">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bankAccountDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15DP"
            android:text="@string/bank_account_details"
            android:textColor="@color/black_b1"
            android:textSize="@dimen/_18SP"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_AccountDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15DP"
            android:text="@string/account_number"
            android:textColor="@color/blue_93"
            android:textSize="@dimen/_14SP"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bankAccountDetails" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_account"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/_0DP"
            android:layout_marginEnd="@dimen/_25DP"
            app:errorEnabled="false"
            app:boxStrokeWidth="@dimen/_1DP"
            app:boxStrokeWidthFocused="@dimen/_1DP"
            android:theme="@style/TextInputStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_AccountDetails"
            app:layout_constraintTop_toBottomOf="@id/tv_AccountDetails">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/account_number"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1"
                android:textColorHint="@color/grey_b1"
                android:paddingVertical="@dimen/_10DP"
                android:paddingStart="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ifsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15DP"
            android:text="@string/ifsc_code"
            android:textColor="@color/blue_93"
            android:textSize="@dimen/_14SP"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="@id/tv_AccountDetails"
            app:layout_constraintTop_toBottomOf="@id/txt_input_account" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_findYour_ifsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_146DP"
            android:layout_marginEnd="@dimen/_25DP"
            android:padding="@dimen/_5DP"
            android:text="@string/find_your_ifsc"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12SP"
            android:visibility="gone"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_ifsc"
            app:layout_constraintTop_toBottomOf="@id/txt_input_account"
            app:layout_constraintTop_toTopOf="@id/tv_ifsc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_ifsc"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/_0DP"
            android:layout_marginEnd="@dimen/_25DP"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeWidth="@dimen/_1DP"
            app:boxStrokeWidthFocused="@dimen/_1DP"
            android:theme="@style/TextInputStyle"
            app:layout_constraintStart_toStartOf="@id/tv_AccountDetails"
            app:layout_constraintTop_toBottomOf="@id/tv_ifsc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_ifsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/enter_ifsc_code"
                android:inputType="text|textCapCharacters"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingVertical="@dimen/_10DP"
                android:paddingStart="0dp"
                android:textColor="@color/Black_grey"
                android:textColorHint="@color/grey_b1" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ifsc_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_info_red"
            android:text="@string/bank_not_found"
            android:textSize="@dimen/_14SP"
            android:textColor="@color/red_4B"
            android:fontFamily="@font/roboto_medium"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10DP"
            app:layout_constraintStart_toStartOf="@+id/tv_AccountDetails"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_ifsc"
            android:drawablePadding="@dimen/_5DP"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ifsc_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_ifsc"
            android:layout_marginTop="@dimen/_15DP"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifsc_bank_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:textSize="@dimen/_16SP"
                android:textColor="@color/green_9E"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawablePadding="@dimen/_5DP"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifsc_branch_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch_name"
                android:textSize="@dimen/_14SP"
                android:textColor="@color/black_4C"
                android:fontFamily="@font/roboto_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ifsc_bank_txt"
                android:drawablePadding="@dimen/_5DP"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15DP"
            android:text="@string/enter_name"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_14SP"
            android:visibility="gone"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="@id/tv_AccountDetails"
            app:layout_constraintTop_toBottomOf="@id/ifsc_error_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_enter_name"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/_0DP"
            android:layout_marginEnd="@dimen/_25DP"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/tv_AccountDetails"
            app:layout_constraintTop_toBottomOf="@id/ifsc_success">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey_d9"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/name"
                android:background="@color/transparent"
                android:inputType="textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:maxLines="1"
                android:paddingVertical="@dimen/_10DP"
                android:paddingStart="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/verified_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20DP"
            android:background="@drawable/ifsc_button_shape"
            android:padding="@dimen/_15DP"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_10DP"
            app:layout_constraintTop_toBottomOf="@id/ifsc_success">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_account_holder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/account_holder_name"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/_14SP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/verified_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_holder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4DP"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/name"
                android:textColor="#2E3A4C"
                android:textSize="@dimen/_18SP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_account_holder_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_cancel_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_card"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/_5DP"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20DP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verified_name">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_cancel_check"
                android:layout_width="@dimen/_300DP"
                android:layout_height="@dimen/_150DP"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/cheque_img"/>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_AppCompatButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30DP"
            android:layout_marginTop="@dimen/_23DP"
            android:layout_marginEnd="@dimen/_30DP"
            android:layout_marginBottom="@dimen/_20DP"
            android:background="@drawable/disable_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_continue"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/grey_A3"
            android:textSize="@dimen/_20SP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_cancel_check" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>